# 1brc

./: Cargo.toml
src/: main.rs
