[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.4"
memmap="0.7.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = "symbols"
#debug = true

